# conway-go-life

./: LICENSE  README.md  pyproject.toml
cgol/: game.py
